--- a/templates/map.html
+++ b/templates/map.html
@@ -109,7 +109,17 @@
                     <div class = "rankings" id = "rankings">
                         <p style = "font-size: 2.2vw; ">World WQI Ranking</p>
                         <p style = "font-size: 0.8vw; margin-top: -2vw">[Last updated]</p>
-                        <button class = "full_ranking" id = "full_ranking">SEE FULL RANKING</button>
+                        <div class = "ranking_board" id = "ranking_board">
+                            {% for country in countries_data %}
+                                <div class = "ranking_tops" id = "ranking_top1">
+                                    <p style = "margin-right: 2vw;"> {{ country.id }} </p>
+                                    <img src = "https://flagsapi.com/{{ country.country_code }}/flat/64.png" style = "width: 1.5vw; height: 1vw; margin: 1.2vw 0.4vw 0 0;">
+                                    <p style = "margin-right: 5vw;"><a class = "details"> {{ country.name }} </a></p>
+                                    <div class = "wqi_rank" id = "wqi_rank" style="margin-left: auto; margin-right: 1vw;"> {{ country.quality }}</div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <button class = "full_ranking" id = "full_ranking" onclick="location.href='{{url_for('rank_page')}}';">SEE FULL RANKING</button>
                     </div>
                     <img src="../static/images/earth.jpg" alt="AquaEmi's logo" style = "width: 8.5vw; height: 6.4vw; cursor: pointer;" onclick = "location.href='map_earth';">
                 </div>
