--- a/static/travel.css
+++ b/static/travel.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;600&display=swap');
 body {
     background-color: #ffffff;
     margin: 0;
     font-family: 'Comic Neue', cursive;
 }
 .navigation {
+    position: fixed;
+    width: 100%;
+    z-index: 2;
     padding: 0.5vw;
     display: flex;
     background-color: #fff;
@@ -31,7 +35,7 @@ body {
     padding: 0 2vw;
 }
 .navigation_keys .tools {
-    margin: -1.5vw -1.5vw 0.5vw 3vw;
+    margin: -1.5vw -0.5vw 0.5vw 2vw;
 }
 .navigation_keys .tools a {
     margin-left: 1vw;
@@ -48,13 +52,13 @@ body {
     width: 26.5vw;
     margin: 7.5vw 0 0 68vw;
     border-radius: 0.2vw;
-    padding: 0.7vw;
+    padding: 0.6vw;
 }
 [placeholder]:focus::-webkit-input-placeholder {
     transition: text-indent 0.2s 0.2s ease; 
     text-indent: -100%;
     opacity: 1;
-}
+ }
 .search_bar input {
     width: 23vw;
     border: none;
@@ -80,8 +84,112 @@ body {
     padding: 0.2vw 1vw;
 }
 .content {
-    padding: 1vw;
+    font-family: 'Noto Sans', sans-serif;
+    padding: 8vw 3vw 1vw 3vw;
     box-shadow: rgba(86, 156, 114, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.search_travel_location {
+    padding: 1vw;
+    border-radius: 0.5vw;
+    border: 0.1vw solid #00A66F;
+}
+.search_travel_input {
+    padding-bottom: -1vw;
+    margin: -0.5vw 0.5vw;
+    width: 94%;
+    border: none;
+    outline: none;
+}
+.near_location {
+    margin-top: 1vw;
+    display: flex;
+}
+.near_location .near_location_box {
+    font-family: 'Comic Neue', cursive;
+    margin: 0 1vw;
+}
+.near_location .near_location_box .near_location_box_text {
+    text-align: center;
+}
+.near_location .near_location_box .near_location_box_text .near_location_box_wqi {
+    display: flex;
+    padding: 0 5.5vw;
+}
+.near_location .near_location_box .near_location_box_text .near_location_box_wqi .wqi_rank {
+    font-size: 1.1vw;
+    font-weight: bold;
+    color: #2b4d00;
+    height: 1.5vw;
+    border-radius: 0.3vw;
+    padding: 0.25vw;
+    width: 4vw;
+    background-color: #c3ff76;
+    text-align: center;
+}
+.near_location .near_location_box .near_location_box_text .to_details {
+    font-family: 'Comic Neue', cursive;
+    margin: 1vw 0;
+    font-size: 1vw;
+    color: #008A5C;
+    font-weight: bold;
+    border-radius: 0.2vw;
+    border: 0.1vw solid #008A5C;
+    background-color: #fff;
+    padding: 0.3vw 2.5vw;
+}
+.recommended_locations {
+    display: flex;
+}
+.recommended_locations .recommended_headline {
+    display: flex;
+}
+.recommended_locations .recommended_locations_text {
+    font-family: 'Comic Neue', cursive;
+    margin: 0 2vw;
+}
+.recommended_locations .recommended_locations_text .recommended_locations_wqi_quality {
+    margin: 0 0 1.5vw 0;
+    display: flex;
+}
+.recommended_locations .recommended_locations_text .recommended_locations_wqi_quality .wqi_rank {
+    font-size: 1.1vw;
+    font-weight: bold;
+    color: #2b4d00;
+    height: 1.5vw;
+    border-radius: 0.3vw;
+    padding: 0.25vw;
+    width: 4vw;
+    background-color: #c3ff76;
+    text-align: center;
+}
+.recommended_locations .recommended_locations_text .recommended_locations_weather {
+    display: flex;
+    border-radius: 0.3vw;
+    border: 0.1vw solid #63af00;
+    padding: 0.5vw;
+}
+.recommended_locations .recommended_locations_text .recommended_locations_weather .temperature {
+    display: flex;
+}
+.recommended_locations .recommended_locations_text .recommended_locations_weather .wind {
+    display: flex;
+}
+.recommended_locations .recommended_locations_text .recommended_locations_weather .wet {
+    display: flex;
+}
+.recommended_locations .recommended_locations_text .data_provided {
+    margin: 2vw 0;
+    border-radius: 0.3vw;
+    width: 35vw;
+    display: flex;
+    text-align: left;
+    border: 0.1vw solid #000;
+}
+.recommended_locations .recommended_locations_text .data_provided .logo {
+    margin: 1vw 1vw 0 1vw;
+}
+.recommended_locations .recommended_locations_text .data_provided .more {
+    margin: 1.15vw 0 0 14vw;
 }
 .footer {
     display: flex;
