--- a/templates/travel.html
+++ b/templates/travel.html
@@ -83,7 +83,171 @@
                 </div>
             </div>
             <div class = "content" id = "content">
-                Helu-
+                <div class = "search_travel_location" id = "search_travel_location">
+                    <img src = "../static/images/search_back.png" style = "width: 1.8vw; height: 1.5vw; margin-bottom: -0.3vw;">
+                    <input type = "text" class = "search_travel_input" id = "search_travel_input" style = "font-size: 1.1vw; font-family: 'Noto Sans', sans-serif;" placeholder = "Enter name country, city or location..."> 
+                    <img src = "../static/images/search.png" style = "width: 1.7vw; height: 1.7vw; margin-bottom: -0.5vw;">
+                </div>
+                <p style = "font-size: 1vw; color: #00A66E; font-weight: bold; margin: 2vw 0 0 0;">Near your location</p>
+                <div class = "near_location" id = "near_location">
+                    <div class = "near_location_box" id = "near_location_box">
+                        <img src = "../static/images/saigonriver5.png" style = "width: 29vw; height: 18vw;">
+                        <div class = "near_location_box_text" id = "near_location_box_text">
+                            <p style = "font-size: 0.9vw;"><mark style = "background-color: #fff; font-weight: bold; font-size: 1.5vw;"> Sai Gon River</mark>, Ho Chi Minh city, Vietnam</p>
+                            <div class = "near_location_box_wqi" id = "near_location_box_wqi">
+                                <div class = "wqi_rank" id = "wqi_rank">33</div>
+                                <p style = "margin: 0.3vw 0 0 1.5vw; font-size: 1vw;">ranked 12th in the world</p>
+                            </div>
+                            <button class = "to_details" id = "to_details">Learn more...</button>
+                        </div>
+                    </div>
+                    <div class = "near_location_box" id = "near_location_box">
+                        <img src = "../static/images/saigonriver5.png" style = "width: 29vw; height: 18vw;">
+                        <div class = "near_location_box_text" id = "near_location_box_text">
+                            <p style = "font-size: 0.9vw;"><mark style = "background-color: #fff; font-weight: bold; font-size: 1.5vw;"> Sai Gon River</mark>, Ho Chi Minh city, Vietnam</p>
+                            <div class = "near_location_box_wqi" id = "near_location_box_wqi">
+                                <div class = "wqi_rank" id = "wqi_rank">33</div>
+                                <p style = "margin: 0.3vw 0 0 1.5vw; font-size: 1vw;">ranked 12th in the world</p>
+                            </div>
+                            <button class = "to_details" id = "to_details">Learn more...</button>
+                        </div>
+                    </div>
+                    <div class = "near_location_box" id = "near_location_box">
+                        <img src = "../static/images/saigonriver5.png" style = "width: 29vw; height: 18vw;">
+                        <div class = "near_location_box_text" id = "near_location_box_text">
+                            <p style = "font-size: 0.9vw;"><mark style = "background-color: #fff; font-weight: bold; font-size: 1.5vw;"> Sai Gon River</mark>, Ho Chi Minh city, Vietnam</p>
+                            <div class = "near_location_box_wqi" id = "near_location_box_wqi">
+                                <div class = "wqi_rank" id = "wqi_rank">33</div>
+                                <p style = "margin: 0.3vw 0 0 1.5vw; font-size: 1vw;">ranked 12th in the world</p>
+                            </div>
+                            <button class = "to_details" id = "to_details">Learn more...</button>
+                        </div>
+                    </div>
+                </div>
+                <p style = "font-size: 1vw; color: #00A66E; font-weight: bold; margin: 2vw 0 0 0;">Recommended locations</p>
+                <div class = "recommended_locations" id = "recommended_locations">
+                    <img src = "../static/images/saigonriver5.png" style = "width: 29vw; height: 18vw;">
+                    <div class = "recommended_locations_text" id = "recommended_locations_text">
+                        <div class = "recommended_headline" id = "recommended_headline">
+                            <p style = "font-size: 1.1vw;"><mark style = "background-color: #fff; font-weight: bold; font-size: 2vw;"> Sai Gon River</mark>, Ho Chi Minh city, Vietnam</p>
+                            <p style = "font-size: 0.8vw; font-weight: bold; margin: 2.05vw 0 -2vw 8.5vw; color: #00A66E">2.1M followers</p>
+                            <img src = "../static/images/heart.png" style = "width: 1vw; height: 1vw; margin: 1.8vw 0 0 0.5vw;">
+                        </div>
+                        <div class = "recommended_locations_wqi_quality" id = "recommended_locations_wqi_quality">
+                            <p style = "font-size: 1.2vw; color: #69b900; font-weight: bold; margin: 0.2vw 2vw 0 0;">Good</p>
+                            <div class = "wqi_rank" id = "wqi_rank">33</div>
+                            <p style = "margin: 0.3vw 0 0 2vw; font-size: 1vw;">ranked 12th in the world</p>
+                        </div>
+                        <div class = "recommended_locations_weather" id = "recommended_locations_weather">
+                            <div class = "temperature" id = "temperature">
+                                <img src = "../static/images/temperature4.png" style = "width: 3vw; height: 2.3vw; margin-left: 2vw;">
+                                <p style = "margin: 0.25vw 8vw 0.25vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">35</p> 
+                            </div>
+                            <div class = "wind" id = "wind">
+                                <img src = "../static/images/wind3.png" style = "width: 2vw; height: 2vw; margin-top: 0.1vw">
+                                <p style = "margin: 0.25vw 9vw 0.25vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">14.8 km/h</p> 
+                            </div>
+                            <div class = "wet" id = "wet">
+                                <img src = "../static/images/wet2.png" style = "margin-top: 0.1vw; width: 1.6vw; height: 2vw">
+                                <p style = "margin: 0.4vw 2vw 0.4vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">38%</p> 
+                            </div>
+                        </div>
+                        <div class = "data_provided" id = "data_provided">
+                            <div class = "logo" id = "logo">
+                                <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 6vw; height: 2vw;">
+                            </div>
+                            <div class = "text" id = "text">
+                                <p style = "font-size: 0.8vw">Data provided by</p>
+                                <p style = "font-size: 0.8vw; font-weight: bold; margin-top: -0.5vw;">WQI modeled using satellite data</p>
+                            </div>
+                            <div class = "more" id = "more">
+                                <img src="../static/images/more.png" alt="More information" style = "width: 1vw; height: 1.2vw;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class = "recommended_locations" id = "recommended_locations">
+                    <img src = "../static/images/saigonriver5.png" style = "width: 29vw; height: 18vw;">
+                    <div class = "recommended_locations_text" id = "recommended_locations_text">
+                        <div class = "recommended_headline" id = "recommended_headline">
+                            <p style = "font-size: 1.1vw;"><mark style = "background-color: #fff; font-weight: bold; font-size: 2vw;"> Sai Gon River</mark>, Ho Chi Minh city, Vietnam</p>
+                            <p style = "font-size: 0.8vw; font-weight: bold; margin: 2.05vw 0 -2vw 8.5vw; color: #00A66E">2.1M followers</p>
+                            <img src = "../static/images/heart.png" style = "width: 1vw; height: 1vw; margin: 1.8vw 0 0 0.5vw;">
+                        </div>
+                        <div class = "recommended_locations_wqi_quality" id = "recommended_locations_wqi_quality">
+                            <p style = "font-size: 1.2vw; color: #69b900; font-weight: bold; margin: 0.2vw 2vw 0 0;">Good</p>
+                            <div class = "wqi_rank" id = "wqi_rank">33</div>
+                            <p style = "margin: 0.3vw 0 0 2vw; font-size: 1vw;">ranked 12th in the world</p>
+                        </div>
+                        <div class = "recommended_locations_weather" id = "recommended_locations_weather">
+                            <div class = "temperature" id = "temperature">
+                                <img src = "../static/images/temperature4.png" style = "width: 3vw; height: 2.3vw; margin-left: 2vw;">
+                                <p style = "margin: 0.25vw 8vw 0.25vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">35</p> 
+                            </div>
+                            <div class = "wind" id = "wind">
+                                <img src = "../static/images/wind3.png" style = "width: 2vw; height: 2vw; margin-top: 0.1vw">
+                                <p style = "margin: 0.25vw 9vw 0.25vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">14.8 km/h</p> 
+                            </div>
+                            <div class = "wet" id = "wet">
+                                <img src = "../static/images/wet2.png" style = "margin-top: 0.1vw; width: 1.6vw; height: 2vw">
+                                <p style = "margin: 0.4vw 2vw 0.4vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">38%</p> 
+                            </div>
+                        </div>
+                        <div class = "data_provided" id = "data_provided">
+                            <div class = "logo" id = "logo">
+                                <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 6vw; height: 2vw;">
+                            </div>
+                            <div class = "text" id = "text">
+                                <p style = "font-size: 0.8vw">Data provided by</p>
+                                <p style = "font-size: 0.8vw; font-weight: bold; margin-top: -0.5vw;">WQI modeled using satellite data</p>
+                            </div>
+                            <div class = "more" id = "more">
+                                <img src="../static/images/more.png" alt="More information" style = "width: 1vw; height: 1.2vw;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class = "recommended_locations" id = "recommended_locations">
+                    <img src = "../static/images/saigonriver5.png" style = "width: 29vw; height: 18vw;">
+                    <div class = "recommended_locations_text" id = "recommended_locations_text">
+                        <div class = "recommended_headline" id = "recommended_headline">
+                            <p style = "font-size: 1.1vw;"><mark style = "background-color: #fff; font-weight: bold; font-size: 2vw;"> Sai Gon River</mark>, Ho Chi Minh city, Vietnam</p>
+                            <p style = "font-size: 0.8vw; font-weight: bold; margin: 2.05vw 0 -2vw 8.5vw; color: #00A66E">2.1M followers</p>
+                            <img src = "../static/images/heart.png" style = "width: 1vw; height: 1vw; margin: 1.8vw 0 0 0.5vw;">
+                        </div>
+                        <div class = "recommended_locations_wqi_quality" id = "recommended_locations_wqi_quality">
+                            <p style = "font-size: 1.2vw; color: #69b900; font-weight: bold; margin: 0.2vw 2vw 0 0;">Good</p>
+                            <div class = "wqi_rank" id = "wqi_rank">33</div>
+                            <p style = "margin: 0.3vw 0 0 2vw; font-size: 1vw;">ranked 12th in the world</p>
+                        </div>
+                        <div class = "recommended_locations_weather" id = "recommended_locations_weather">
+                            <div class = "temperature" id = "temperature">
+                                <img src = "../static/images/temperature4.png" style = "width: 3vw; height: 2.3vw; margin-left: 2vw;">
+                                <p style = "margin: 0.25vw 8vw 0.25vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">35</p> 
+                            </div>
+                            <div class = "wind" id = "wind">
+                                <img src = "../static/images/wind3.png" style = "width: 2vw; height: 2vw; margin-top: 0.1vw">
+                                <p style = "margin: 0.25vw 9vw 0.25vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">14.8 km/h</p> 
+                            </div>
+                            <div class = "wet" id = "wet">
+                                <img src = "../static/images/wet2.png" style = "margin-top: 0.1vw; width: 1.6vw; height: 2vw">
+                                <p style = "margin: 0.4vw 2vw 0.4vw 0.5vw; font-size: 1.3vw; font-weight: bold; color: #94D53F">38%</p> 
+                            </div>
+                        </div>
+                        <div class = "data_provided" id = "data_provided">
+                            <div class = "logo" id = "logo">
+                                <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 6vw; height: 2vw;">
+                            </div>
+                            <div class = "text" id = "text">
+                                <p style = "font-size: 0.8vw">Data provided by</p>
+                                <p style = "font-size: 0.8vw; font-weight: bold; margin-top: -0.5vw;">WQI modeled using satellite data</p>
+                            </div>
+                            <div class = "more" id = "more">
+                                <img src="../static/images/more.png" alt="More information" style = "width: 1vw; height: 1.2vw;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <footer>
