--- a/templates/article2.html
+++ b/templates/article2.html
@@ -46,7 +46,7 @@
         <section class = "navigation" id = "navigation">
             <nav>
                 <div class = "navigation_bar" id = "navigation_bar">
-                    <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 12.5vw; height: 4.5vw;">
+                    <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 12.5vw; height: 4.5vw;" onclick="location.href='{{url_for('home_page')}}';">
                     <div class = "navigation_keys" id = "navigation_keys">
                         <div class = "subjects" id = "subjects">
                             <p><a href = "index" title = "My water" style = "text-decoration: none; color: #00A66F;">My water</a></p>
