--- a/templates/map.html
+++ b/templates/map.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
+        <link rel="stylesheet" href="../static/dist/MarkerCluster.css">
+        <link rel="stylesheet" href="../static/dist/MarkerCluster.Default.css">
+        <script src="../static/dist/leaflet.markercluster-src.js"></script>
+        
         <!-- Leaflet heatmap plugin: https://github.com/Leaflet/Leaflet.heat -->
         <script src="../static/leaflet-heat.js"></script>
         
@@ -55,7 +59,7 @@
         <section class = "navigation" id = "navigation">
             <nav>
                 <div class = "navigation_bar" id = "navigation_bar">
-                    <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 12.5vw; height: 4.5vw;">
+                    <img src="../static/images/logo.png" alt="AquaEmi's logo" style = "width: 12.5vw; height: 4.5vw;" onclick="location.href='{{url_for('home_page')}}';">
                     <div class = "navigation_keys" id = "navigation_keys">
                         <div class = "subjects" id = "subjects">
                             <p><a href = "index" title = "My water" style = "text-decoration: none; color: #00A66F;">My water</a></p>
@@ -99,10 +103,52 @@
                         center: [51.505, -0.09],
                         zoom: 3
                     });
-                    
+                        
                     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {}).addTo(map);
-
-                    var heat = L.heatLayer({{data | safe}}, {radius: 15, minOpacity: 0.4, gradient: {0.4: 'blue', 0.65: 'lime', 1: 'red'}}).addTo(map);
+    
+                    var data = {{ data | safe }};
+    
+                    // var heat = L.heatLayer(data, {radius: 25, minOpacity: 0.4, gradient: {0.4: 'blue', 0.65: 'lime', 1: 'red'}}).addTo(map);
+    
+                    var markers = L.markerClusterGroup({
+                        iconCreateFunction: function (cluster) {
+                            var markers = cluster.getAllChildMarkers();
+                            var n = 0;
+                            for (var i = 0; i < markers.length; i++) {
+                                console.log(markers[i])
+                                n += markers[i].number;
+                            }
+                            n /= Math.max(1, markers.length);
+                            n = Math.floor(n);
+                            if (n <= 100) {
+                                return L.divIcon({ html: '<div><span>' + n + '</span></div>', className: 'marker-cluster marker-cluster-small', /*iconSize: L.point(40, 40)*/ });
+                            } else if (n <= 200) {
+                                return L.divIcon({ html: '<div><span>' + n + '</span></div>', className: 'marker-cluster marker-cluster-medium', /*iconSize: L.point(40, 40)*/ });
+                            } else {
+                                return L.divIcon({ html: '<div><span>' + n + '</span></div>', className: 'marker-cluster marker-cluster-large', /*iconSize: L.point(40, 40)*/ });
+                            }
+                        },
+                        spiderfyOnMaxZoom: false, 
+                        showCoverageOnHover: false, 
+                        zoomToBoundsOnClick: false,
+                    });
+    
+                    for (var i = 0; i < data.length; i++) {
+                        var a = data[i];
+                        var title = a[2];
+                        var marker = L.marker(new L.LatLng(a[0], a[1]), {title: title});
+                        marker.number = a[2];
+                        marker.bindPopup(title);
+                        markers.addLayer(marker);
+    
+                        // add two nearby marker so it doesn't actually show the marker
+                        var title1 = a[2];
+                        var marker1 = L.marker(new L.LatLng(a[0], a[1]), {title: title1});
+                        marker1.number = a[2];
+                        markers.addLayer(marker1);
+                    }
+    
+                    map.addLayer(markers);
                 </script>
                 <div class = "earth_map" id = "earth_map">
                     <span class = "remove_ranking" id = "remove_ranking"><i class="fa-solid fa-x fa-2xs" style="color: #ffffff;"></i></span>
